# HIAAC-FL-Testbed

./: README.md  ansible.cfg  ansible.sync-conflict-20250706-001449-Y4HSAB5.cfg  inventory  jetsons.yaml  raspi.yaml  site.yml  test.yaml  vault.yml
Arquivos/Depois/fed_project/: requirements.txt  run_playbook.yml  setup_playbook.yml
Arquivos/Depois/fed_project/dados/: dqn_res.csv  x_mul_test.csv  xgb_res.csv  y_mul_train.csv  y_one_train.csv
Documentos/Depois/fed_project/: pyproject.toml
Documentos/Depois/fed_project/dados/: analysis.ipynb  log_reg_res.csv
Documentos/Depois/fed_project/dqn/: client.py  utils.py
Documentos/Depois/fed_project/xgb/: server.py
Testes/: Ping.yaml
fed_project/: cleanup.yml  inventory.yml  run_playbook.yml
fed_project/dados/: mlp_res.csv  x_one_test.csv  x_sur_test.csv  y_mul_test.csv  y_one_test.csv  y_sur_test.csv
fed_project/dqn/environments/: README.md  checkenv.py  doublecheckenv.py
fed_project/log_reg/: client.py  utils.py
fed_project/mlp/: server.py  utils.py
fed_project/xgb/: client.py  utils.py
playbooks/Flower/: 1_setup_nodes.yaml  2_update_files.yaml  3_start_clients.yaml  shell.yaml
playbooks/Templates/: copy.yaml
playbooks/pi_jetsons/: repositorio_PI.yaml
playbooks/pi_jetsons/geral/: atualizar_requirements.yaml
playbooks/pi_jetsons/jetsons/: repositorio_JETSON.yaml
playbooks/testes/: deploy_flower.yaml  ping.yaml  shell.yaml  start_pis.yaml  teste.yaml  testett.yaml
playbooks/usados/: atualizar.yaml  chave_ssh.yaml  repositorio.yaml  repositorio_JETSON.yaml  repositorio_PI.yaml
(+4 files in other folders)
