[tool.poetry]
name = "federated-ansible"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.3"
scikit-learn = "1.3.2"
xgboost = "2.1.2"
tensorflow = "2.18.0"
keras = "3.8.0"
flwr = "1.14.0"
stable-baselines3 = "2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
